--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ python-dotenv==0.21.0
 # Notebook Requirements (commented out to reduce slug size)
 scikit-learn==1.5.1
 scikit-surprise==1.1.4
+numpy==1.26.4
 # nltk==3.9.1
-# numpy==1.26.4
 # matplotlib==3.8.4
 # seaborn==0.13.2
